--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ajinkya Bhushan",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
